--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -3,6 +3,11 @@
 @import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,500);
 @import url(http://fonts.googleapis.com/css?family=Philosopher:400,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+$blueGrey: #6D8397;
+$blue: #307FA7;
+$green: #3D8C7D;
+$peach: #DF6955;
+$red: #BC242C;
 
 html {font-size: 1em;}
 
@@ -11,7 +16,7 @@ body {
   font-family: 'Open Sans', serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #333;
+  color: $blue;
 }
 
 p {margin-bottom: 1.3em;}
@@ -21,6 +26,7 @@ h1, h2, h3, h4 {
   font-weight: inherit;
   line-height: 1.2;
   font-family: 'Philosopher';
+  color: $peach;
 }
 
 h1 {
@@ -36,6 +42,7 @@ h4 {font-size: 1.414em;}
 
 h5,  h6 {
   font-weight: bolder;
+  color: $peach;
 }
 
 small, .font_small {font-size: 0.707em;}
