--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,10 +1,14 @@
+$blueGrey: #6D8397;
+$blue: #307FA7;
+$green: #3D8C7D;
+$peach: #DF6955;
+$red: #BC242C;
+
 .top {
   display: inline-block;
 }
 
-fieldset {
-  display: inline;
-}
+
 
 form {
   background-color: rgba(000,000,000, 0.1);
@@ -13,13 +17,21 @@ form {
   width: 40%;
   padding-top: 20px;
   padding-bottom: 5px;
+
+  fieldset {
+    display: inline;
+
+  }
+  .input {
+    line-height: 1.7;
+  }
+
+  .text, .gender {
+    padding-right: 10px;
+  }
 }
-.input {
-  line-height: 1.7;
-}
-.text, .gender {
-  padding-right: 10px;
-}
+
+
 .country {
   font-size: 14px;
 }
