--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -28,8 +28,24 @@ time, mark, audio, video {
 }
 
 .imgback {
-  background-image: url('http://www.splitshire.com/wp-content/uploads/2015/06/SplitShire-5466-420x420-420x420.jpg');
-  // opacity: 0.;
+  position: relative;
+  overflow: hidden;
+}
+
+.imgback p {
+  position: relative;
+  z-index: 2;
+  color: white;
+  margin: 5px;
+}
+
+.imgback img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.8;
 }
 
 .row {
