--- a/views/styleguide.jade
+++ b/views/styleguide.jade
@@ -39,8 +39,10 @@ html
         div.colThird
           img.right(src='http://gratisography.com/pictures/127_1.jpg' height='250' width='325')
       h6 This is an example of heading 6
-      p.imgback
-        | A simple paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      div.imgback
+        img(src='http://www.splitshire.com/wp-content/uploads/2015/06/SplitShire-5466-420x420-420x420.jpg')
+        p
+          | A simple paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       p
         | Some inline examples. 
         strong This is strong text
